--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.social-btn{
+  position: static;
+      text-align: center;
+      width: 90px;
+      height: 20px;
+      padding: 10px;
+      font-size: 15px;
+      background-color: aqua;
+
+}
