--- a/app/views/welcome/faq.html.erb
+++ b/app/views/welcome/faq.html.erb
@@ -1,7 +1,4 @@
 <h2>FAQ</h2>
 
-<<<<<<< HEAD
-<p>Here are answers to some of the frequently asked questions:</p>  
-=======
 <p>Here are answers to some of the frequently asked questions:</p>
->>>>>>> checkpoint-rails-html-css
+<a href="https://twitter.com/EyitayoW?lang=en">twitter</a>
