--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,37 @@
  */
  @import "bootstrap-sprockets";
   @import "bootstrap";
+
+  .user-info {
+    display: inline-block;
+    margin-top: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    font-size: 13px;
+}
+
+.my_name{
+font-style: italic;
+margin-top: 0px;
+margin-bottom: 0px;
+margin-right: 25px;
+}
+
+.my_image{
+  float: right;
+  background-color: gray;
+  border-style: solid;
+  margin-bottom: 5px;
+}
+
+.nav {
+    margin-top: 5px;
+    font-size: 20px;
+}
+
+.nav-tabs > li > a {
+  margin-right: 2px;
+  line-height: 3;
+  border: 1px solid transparent;
+  border-radius: 4px 4px 0 0;
+}
