--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,18 @@
         <li><%= link_to "Bloccit", root_path %></li>
         <li><%= link_to "Topics", topics_path %></li>
         <li><%= link_to "About", about_path %></li>
-        <% if current_user %>
-           <li class="pull-right"><%= link_to "#{current_user.name} -Sign Out", session_path(current_user), method: :delete %></li>
-         <% else %>
+
+        <div class="pull-right user-info">
+          <% if current_user %>
+          <div class="my_name">
+          <%= current_user.name %><br>
+          </div>
+         <%= link_to "Sign Out", session_path(current_user), method: :delete %>
+         <%=image_tag avatar_url(current_user), class: :my_image %>
+         <div class="pull-right">
+       </div>
+
+        <% else %>
            <li class="pull-right"><%= link_to "Sign In", new_session_path %></li>
            <li class="pull-right"><%= link_to "Sign Up", new_user_path %></li>
          <% end %>
